--- a/project/project3/index.html
+++ b/project/project3/index.html
@@ -30,8 +30,7 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a target="_blank" href=""
-        >Youtube channel</a
+      <a target="_blank" href="" >Youtube channel</a
       >
     </nav>
     <div class="center">
